--- a/package.json
+++ b/package.json
@@ -31,5 +31,8 @@
     "crypto-js": "^4.0.0",
     "querystring": "^0.2.1",
     "superagent": "^5.2.2"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
